--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
 </head>
+
 <body>
-    <h1>Hello Colton welcome to your new site!<h1>
-    <p>To help you get accustomed we already made some simple html tags and css styling for you! Poke around and customize as you wish!
+    <section class="maincontent"></section>
+    <h1 class="title">This is a Title</h1>
+    <p>To help you get accustomed we already made some simple html tags and css styling for you! Poke around
+        and
+        customize as you wish!</p>
+    <img id="img" src="https://i.pinimg.com/originals/54/7a/9c/547a9cc6b93e10261f1dd8a8af474e03.jpg" alt="A neon Wolf">
+    </section>
 </body>
+
 </html>
