--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 
 <body>
-    <section class="maincontent"></section>
-    <h1 class="title">This is a Title</h1>
-    <p>To help you get accustomed we already made some simple html tags and css styling for you! Poke around
-        and
-        customize as you wish!</p>
-    <img id="img" src="https://i.pinimg.com/originals/54/7a/9c/547a9cc6b93e10261f1dd8a8af474e03.jpg" alt="A neon Wolf">
+    <section class="maincontent">
+        <h1 class="title">This is a Title</h1>
+        <p>To help you get accustomed we already made some simple html tags and css styling for you! Poke around
+            and
+            customize as you wish!</p>
+        <img id="img" src="https://i.pinimg.com/originals/54/7a/9c/547a9cc6b93e10261f1dd8a8af474e03.jpg"
+            alt="A neon Wolf">
     </section>
 </body>
 
